--- a/style.css
+++ b/style.css
@@ -20,6 +20,14 @@ h1 {
     margin-bottom: 10px;
 }
 
+p {
+    color: #666;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .description {
     color: #666;
     text-align: center;
