--- a/style.css
+++ b/style.css
@@ -5,6 +5,31 @@ body {
     background-color: #f5f5f5;
 }
 
+/* Navigation */
+nav {
+    display: flex;
+    margin-bottom: 2em;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    --border-color: oklch(50% 10% 200 / 40%);
+    border-bottom-color: var(--border-color);
+}
+nav a {
+    flex: 1;
+    text-decoration: none;
+    color: inherit;
+    text-align: center;
+    padding: 0.5em;
+}
+nav a.current {
+    border-bottom-width: 4px;
+    border-bottom-color: var(--border-color);
+    font-weight: bold;
+    padding-bottom: 1px;
+    border-bottom-style: solid;
+}
+/* End of navigation */
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
