--- a/style.css
+++ b/style.css
@@ -43,11 +43,18 @@ h1 {
     color: #333;
     text-align: center;
     margin-bottom: 10px;
+    font-weight: bold;
+}
+
+h2 {
+    color: #333;
+    text-align: left;
+    margin-bottom: 10px;
 }
 
 p {
     color: #666;
-    text-align: center;
+    text-align: left;
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
