--- a/style.css
+++ b/style.css
@@ -84,9 +84,11 @@ p {
 }
 
 #chart {
+    display: block;
     width: 100%;
-    height: 600px;
+    height: auto; /* grows with content */
     overflow: hidden;
+    margin-bottom: 20px;
 }
 
 .link {
@@ -226,16 +228,11 @@ button:disabled {
     font-weight: 400;
     color: #333;
     padding: 16px 24px;
-    /* background-color: #f9f9f9; */
     background-color: #4caf4f1f;
     border: 1px solid #4CAF50;
-    /* border-color: #8e8e8e;
-    border-width: 1px;
-    border-style: solid; */
-    /* border-left: 4px solid #4CAF50; Matches green buttons */
     border-radius: 4px;
     margin: 20px 0;
-    max-width: 800px;
+    max-width: 100%;
     margin-left: 30px;
 }  
 
