--- a/style.css
+++ b/style.css
@@ -233,7 +233,8 @@ button:disabled {
     border-radius: 4px;
     margin: 20px 0;
     max-width: 100%;
-    margin-left: 30px;
+    margin-left: 40px;
+    margin-right: 40px;
 }  
 
 .step-indicator {
