--- a/style.css
+++ b/style.css
@@ -44,6 +44,34 @@ a:hover {
 }
 /* End of navigation */
 
+/* Styling the header */
+.header-container {
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 20px;
+    background: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
+
+h1 {
+    color: #2c3e50;
+}
+
+p {
+    color: #555;
+    line-height: 1.6;
+}
+
+.highlight {
+    font-weight: bold;
+    font-style: italic;
+    color: #e74c3c;
+    padding-left: 1em;
+    text-align: left;
+}
+/* End of header styling */
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -79,9 +107,10 @@ p {
     color: #666;
     text-align: center;
     margin-bottom: 30px;
-    max-width: 800px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    font-size: 25px;
 }
 
 #chart {
@@ -339,3 +368,28 @@ button:disabled {
     border-radius: 3px;
 }
 
+/* Trying to style the text */
+.question_description {
+    color: #333;
+    text-align: left;
+    margin-bottom: 10px;
+    font-size: 20px;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+} 
+
+.question_description:hover {
+    --color-accent: #4CAF50;
+    border-bottom-width: 4px;
+    border-bottom-color: var(--color-accent);
+    padding-bottom: 1px;
+    border-bottom-style: solid;
+    background-color: oklch(from var(--color-accent) 95% 5% h);
+    background-color: light-dark(oklch(from var(--color-accent) 95% 5% h), oklch(from var(--color-accent)  20% 80% h));
+    transition: 300ms;
+}
