--- a/style.css
+++ b/style.css
@@ -44,12 +44,13 @@ a:hover {
 }
 /* End of navigation */
 
-/* Styling the header */
-.header-container {
+/* Styling the info boxes */
+.header-container, .barchart-info-container, .sankey-info-container {
     max-width: auto;
     margin: 20px auto;
     padding: 20px;
-    background: white;
+    background-color: #f9f9f9;
+    border-left: 4px solid #4CAF50;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
 }
@@ -73,74 +74,57 @@ p {
 /* End of header styling */
 
 /* Styling for the images */
-/* .image-container {
-    display: flex;
-    justify-content: center; 
-    gap: 10px; 
-    margin-bottom: 20px;
-    background-color: white;
-}
-
-.image-container img {
-    width: 450px; 
-    height: 500px; 
-    object-fit: cover; 
-    border-radius: 8px; 
-    transition: filter 0.3s ease-in-out; 
-    filter: grayscale(100%);
-}
-
-.image-container img:hover {
-    filter: grayscale(1%);
-} */
-
-/* Styling for the image container */
 .image-container {
     display: flex;
     justify-content: center;
     gap: 10px;
     margin-bottom: 20px;
     background-color: white;
+    max-width: auto;
+    flex-wrap: wrap;
+    z-index: 0;
 }
 
-/* Wrapper for each image */
 .image-wrapper {
     position: relative;
-    display: inline-block;
+    display: flex;
+    flex: 1 1 calc(25% - 20px); 
+    max-width: 25%;
+    z-index: 1;
 }
 
-/* Image styling */
 .image-wrapper img {
-    width: 450px;
-    height: 500px;
+    width: 100%;
+    height: auto;
     object-fit: cover;
     border-radius: 8px;
     transition: filter 0.3s ease-in-out;
     filter: grayscale(100%);
-    display: block;
+    pointer-events: auto;
 }
 
-/* Image hover effect */
 .image-wrapper:hover img {
     filter: grayscale(0%);
 }
 
-/* Tooltip Styling */
-.image-wrapper .tooltip {
+.image-wrapper:hover::after {
+    content: attr(data-tooltip);
     position: absolute;
-    bottom: 110%; /* Position tooltip above the image */
+    bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
-    padding: 8px 12px;
+    padding: 8px;
     border-radius: 5px;
-    font-size: 14px;
+    opacity: 1;
+    visibility: visible;
     white-space: nowrap;
-    display: none; /* Initially hidden */
-    z-index: 100;
+    transition: opacity 0.2s ease-in, visibility 0s linear 0s;
+    max-width: 1000px; 
+    word-wrap: break-word;
+    font-size: 18px;
 }
-
 /*End of image styling */
 
 .container {
