--- a/style.css
+++ b/style.css
@@ -57,12 +57,13 @@ a:hover {
 
 h1 {
     color: #2c3e50;
-    font-size:25px;
+    font-size:22px;
 }
 
 p {
     color: #555;
     line-height: 1.2;
+    font-size: 20px;
 }
 
 .highlight {
@@ -74,7 +75,7 @@ p {
 }
 /* End of header styling */
 
-/* Styling for the surgical department desc textbox */
+/* Styling for the surgical department desc, Sankey textbox */
 .surgery-departments-container {
     max-width: auto;
     margin: 20px auto;
@@ -83,7 +84,7 @@ p {
     border-left: 4px solid #4CAF50;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .surgery-departments-container h2 {
@@ -91,7 +92,15 @@ p {
     cursor: pointer;
     display: flex;
     align-items: center;
-    font-size: 25px;
+    font-size: 20px;
+}
+
+.info-container h2 {
+    font-weight: bold;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    font-size: 20px;
 }
 
 .toggle-indicator {
@@ -117,7 +126,12 @@ p {
     text-align: left;
     font-style: italic;
 }
-/* End of surgical department desc textbox */
+
+.detail {
+    padding-left: 2em;
+    text-align: left;
+}
+/* End of info textbox */
 
 /* Styling for the images */
 .image-container-surgery-types, .image-container-departments {
@@ -219,7 +233,7 @@ p {
     max-width: auto;
     margin-left: auto;
     margin-right: auto;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 #chart {
@@ -372,7 +386,7 @@ button:disabled {
     border-left: 4px solid #4CAF50;
     padding: 15px;
     /* margin-top: 20px; */
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.5;
     align-self: flex-start;
 }
